--- a/growing/requirements.txt
+++ b/growing/requirements.txt
@@ -4,7 +4,10 @@ django-configurations==2.0
 django-debug-toolbar==1.8
 django-dotenv==1.4.1
 django-extensions==1.7.9
+django-filter==1.1.0
+djangorestframework==3.8.2
 gunicorn==19.7.1
+Markdown==2.6.11
 newrelic==2.86.3.70
 psycopg2==2.7.1
 pytz==2018.4
